--- a/config/blog/templates/blog/base.html
+++ b/config/blog/templates/blog/base.html
@@ -1,12 +1,33 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'blog/base.css' %}">
+    {% block stylesheet %}{% endblock %}
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
+
+    <div class="nav">
+    <h1>BlogApp</h1>
+    <div class="nav_links">
+      <a href="{% url 'index' %}">Home</a>
+    {% if request.user.is_authenticated %}
+    
+    <a href="{% url 'user_info' %}">{{request.user}}</a>
+    <a href="{% url 'log_out' %}">Log out</a>
+    {% else %}
+    <a href="{% url 'log_in' %}">Log in</a>
+    <a href="{% url 'sign_up' %}">Sign up</a>
+    {% endif %}
+    
+    </div>
+
+    </div>
     {% block body %} {% endblock %}
   </body>
 </html>
