--- a/config/blog/templates/blog/index.html
+++ b/config/blog/templates/blog/index.html
@@ -1,26 +1,23 @@
 {% extends 'blog/base.html' %} 
+{% load static %}
+
+{% block stylesheet %}<link rel="stylesheet" href="{% static 'blog/style.css' %}" />{% endblock %}
+{% block title %}Home Page{%endblock%}
 
 {% block body %}
 
-{% if request.user.is_authenticated %}
-{{request.user}}
-<a href="{% url 'user_info' %}">User info</a>
-<a href="{% url 'log_out' %}">Log out</a>
-{% else %}
-<a href="{% url 'log_in' %}">Log in</a>
-<a href="{% url 'sign_up' %}">Sign up</a>
-{% endif %}
-
-<h1>Blogs</h1>
 {% for blog in blogs %}
-    <br>
+    <div class="blog">
+    <br />
     <h2>{{blog.title}}</h2>
-    <br>
+    <br />
     <em>Author: {{blog.author}}</em>
-    <br>
-    <em>date: {{blog.date}}</em>
+    <br />
+    <em>Published on {{blog.date}}</em>
     
     <p>{{blog.content}}</p>
-{% endfor %}
+    </div>
+
+{% endfor %} 
 
 {%endblock%}
