--- a/config/blog/static/blog/login.scss
+++ b/config/blog/static/blog/login.scss
@@ -4,15 +4,39 @@
     display: flex;
     align-items: center;
     .login{
+        display: flex;
+        align-items: center;
+        &__container{
+            height: fit-content;
+            width: fit-content;
+            margin: auto;
+            // background-color: red;
+            input{
+                outline: none;
+                padding: 2px;
+                border: none;
+            }
+            input[type=submit]{
+                transition: 0.2s;
+                background: white;
+                outline: none;
+                padding: 5px;
+            }
+            input[type=submit]:hover{
+                cursor: pointer;
+                background: rgb(189, 212, 255);
+            }
+        }
         position: relative;
-        height: 300px;
-        width: 300px;
+        height: 350px;
+        width: 350px;
         text-align: center;
         background-color: rgb(156, 156, 240);
         margin: auto;
+        border-radius: 20px;
         form{
             p{
-                margin: 1rem;
+                margin: 1.3rem;
             }
         }
         a{
