--- a/config/blog/static/blog/signup.scss
+++ b/config/blog/static/blog/signup.scss
@@ -1,5 +1,35 @@
-@import 'globals';
-
-ul{
-    display: none;
+.container{
+    height: 90.4vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    .signup{
+        margin: auto;
+        height: 350px;
+        width: 350px;
+        background: rgb(163, 163, 245);
+        display: flex;
+        align-items: center;
+        border-radius: 20px;
+        &__form{
+            margin: auto;
+            height: fit-content;
+            width: fit-content;
+            input{
+                outline: none;
+                padding: 2px;
+                border: none;
+            }
+            input[type=submit]{
+                transition: 0.2s;
+                background: white;
+                outline: none;
+                padding: 5px;
+            }
+            input[type=submit]:hover{
+                cursor: pointer;
+                background: rgb(189, 212, 255);
+            }
+        }
+    }
 }
